Update search table view style from `grouped` to `plain` per design review on previous Product search PR.

--- a/WooCommerce/Classes/ViewRelated/Orders/SearchViewController.xib
+++ b/WooCommerce/Classes/ViewRelated/Orders/SearchViewController.xib
@@ -46,9 +46,9 @@
                         <action selector="dismissWasPressed" destination="-1" eventType="touchUpInside" id="xwh-lf-NJz"/>
                     </connections>
                 </button>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="y9n-QI-xEB">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="y9n-QI-xEB">
                     <rect key="frame" x="0.0" y="76" width="375" height="591"/>
-                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="qvh-01-20Z"/>
                         <outlet property="delegate" destination="-1" id="RjJ-a4-Y3Q"/>
