--- a/WooCommerce/Classes/ViewRelated/ReusableViews/LeftImageMultilineTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/LeftImageMultilineTableViewCell.xib
@@ -24,7 +24,7 @@
                             <constraint firstAttribute="width" constant="24" id="iDq-ae-O8T"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Multiline label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cl2-iQ-5ZR">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Multiline label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cl2-iQ-5ZR">
                         <rect key="frame" x="56" y="16" width="239" height="12"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
